--- a/src/index.html
+++ b/src/index.html
@@ -9,14 +9,16 @@
 
 <body>
     <div class="container">
-    <form id="spacePicForm">
-        <label for="picDate">Choose a date to see picture of the day!</label>
-        <input id="picDate" type="date" min="1995-06-20">
-        <button type="submit">Submit</button>
-    </form>
-    <div id="return-field">
-    <p id="spacediv"></p>
-    </div>
+        <form id="spacePicForm">
+            <label for="picDate">Choose a date to see picture of the day!</label>
+            <input id="picDate" type="date" min="1995-06-20">
+            <button type="submit">Submit</button>
+        </form>
+        <div id="return-field">
+            <p id="titlediv"></p>
+            <p id="spacediv"></p>
+            <p id="quote" class="quote"></p>
+        </div>
     </div>
 </body>
 
